--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
         "@typescript-eslint/eslint-plugin": "^5.2.0",
         "@typescript-eslint/parser": "^5.2.0",
         "builtin-modules": "^3.2.0",
-        "obsidian": "latest",
-        "tslib": "2.3.1",
-        "typescript": "4.4.4"
+        "esbuild-plugin-sass": "^1.0.1",
+        "tslib": "2.3.1"
     },
     "dependencies": {
         "esbuild": "^0.24.0",
-        "sass": "^1.80.6"
+        "obsidian": "^1.7.2",
+        "sass": "^1.80.6",
+        "typescript": "^5.6.3"
     }
 }
